fix overflow

--- a/src/_scss/pages/account/results/table/awardTable.scss
+++ b/src/_scss/pages/account/results/table/awardTable.scss
@@ -17,6 +17,11 @@
         border: 1px solid $color-gray-light;
     }
 
+    .advanced-search__table-wrapper {
+        width: auto;
+        overflow-x: scroll;
+    }
+    
     .results-table-width-master {
         width: 100%;
     }
